--- a/styles.css
+++ b/styles.css
@@ -21,12 +21,37 @@
     border: none;
     outline: 2px solid #255f38;
     cursor: pointer;
-    transition: all 75ms ease-out;
     color: #97bd80;
     background-color: #18230f;
 }
 
-.count-btn:active,
+.count-btn {
+    position: relative;
+    z-index: 0;
+    transition: 450ms ease-in-out;
+}
+
+.count-btn::after {
+    content: '';
+    background-color: #97bd80;
+    height: 100%;
+    width: 0;
+    border-radius: 9px;
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: -1;
+    transition: 450ms ease-in-out;
+}
+
+.count-btn:hover::after {
+    width: 100%;
+}
+
+.count-btn:hover {
+    color: #18230f;
+}
+
 .reset-btn:active {
     color: #18230f;
     background-color: #97bd80;
